--- a/UYGULAMALAR/egitimöncesiuygulamalar/3.Hafta Eğitim Öncesi Görevleri.ipynb
+++ b/UYGULAMALAR/egitimöncesiuygulamalar/3.Hafta Eğitim Öncesi Görevleri.ipynb
@@ -15,13 +15,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "NGjvNwKx_Te7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "21 7'ye tam bölünür.\n"
+          ]
+        }
+      ],
       "source": [
-        "# 1.Problemin Çözümünü Buraya Yazınız"
+        "sayi = int(input(\"sayi: \"))\n",
+        "kalan = sayi % 7\n",
+        "if kalan == 0:\n",
+        "    print(sayi, \"7'ye tam bölünür.\")\n",
+        "else:\n",
+        "    print(sayi, \"7'ye tam bölünmez.\")\n"
       ]
     },
     {
@@ -55,13 +68,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "MXTtCxI1_Te8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Geçtiniz. Harf notu: BA. Not ortalaması: 84.0\n"
+          ]
+        }
+      ],
       "source": [
-        "# 2.Problemin Çözümünü Buraya Yazınız"
+        "vizeNotu = float(input(\"Vize notu: \"))\n",
+        "finalNotu = float(input(\"Final notU: \"))\n",
+        "dönemOrtalamasi= (vizeNotu * 0.4) + (finalNotu * 0.6)\n",
+        "if dönemOrtalamasi >= 85:\n",
+        "    harfNotu = \"AA\"\n",
+        "elif dönemOrtalamasi >= 75:\n",
+        "    harfNotu = \"BA\"\n",
+        "elif dönemOrtalamasi >= 70:\n",
+        "    harfNotu = \"BB\"\n",
+        "elif dönemOrtalamasi >= 65:\n",
+        "    harfNotu = \"CB\"\n",
+        "elif dönemOrtalamasi >= 60:\n",
+        "    harfNotu = \"CC\"\n",
+        "elif dönemOrtalamasi >= 55:\n",
+        "    harfNotu = \"DC\"\n",
+        "elif dönemOrtalamasi >= 50:\n",
+        "    harfNotu = \"DD\"\n",
+        "    # BURAYA KADAR DEVAM AMA BURADAN SONRA ELSE KULLANIYORUZ ÇÜNKÜ ARTIK HARFİ DEĞİL GEÇEMEDİN DİCEZ\n",
+        "else:\n",
+        "    harfNotu = \"FF\"\n",
+        "\n",
+        "\n",
+        "if dönemOrtalamasi < 50 or finalNotu < 50:\n",
+        "    print(\"KALDINIZ. Not ortalamasİ: {}\".format(dönemOrtalamasi))\n",
+        "else:\n",
+        "    print(\"Geçtiniz. Harf notu: {}. Not ortalaması: {}\".format(harfNotu, dönemOrtalamasi))\n"
       ]
     },
     {
@@ -84,13 +130,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "bPjE8W0i_Te8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "mehmetiN yaşİ daha büyük ve yaşi 25 dir.\n"
+          ]
+        }
+      ],
       "source": [
-        "# 3.Problemin Çözümünü Buraya Yazınız"
+        "isim1 = input(\"Birinci YetGenli: \")\n",
+        "yas1 = int(input(\"Birinci YetGenlinin yaşi : \"))\n",
+        "isim2 = input(\"İkinci YetGenli: \")\n",
+        "yas2 = int(input(\"İkinci YetGenlinin yani : \"))\n",
+        "\n",
+        "if yas1 > yas2:\n",
+        "    print(isim1 + \"in yaşİ daha büyük ve yaşi\", yas1, \"dir.\")\n",
+        "elif yas2 > yas1:\n",
+        "    print(isim2 + \"iN yaşİ daha büyük ve yaşi\", yas2, \"dir.\")\n",
+        "else:\n",
+        "    print(\"İki YetGenlinin yaşİ da eşit ve yaşi\", yas1, \"dir.\")\n"
       ]
     },
     {
@@ -112,13 +176,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "TSAXs8et_Te9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Ateşiniz 38.0 derece. AVMye giremezsin Hemen evine dön\n"
+          ]
+        }
+      ],
       "source": [
-        "# 4.Problemin Çözümünü Buraya Yazınız"
+        "ates = float(input(\"Ateşinizi girin: \"))\n",
+        "if ates < 37.5:\n",
+        "    print(\"Ateşiniz\", ates, \"derece. AVMye girebilirsin Maske takmayi unutma\")\n",
+        "else:\n",
+        "    print(\"Ateşiniz\", ates, \"derece. AVMye giremezsin Hemen evine dön\")\n"
       ]
     },
     {
@@ -150,13 +226,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "t-XPI_u0_Te-"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "bki: 29.536862003780715. Fazla Kilolusunuz.\n"
+          ]
+        }
+      ],
       "source": [
-        "# 5.Problemin Çözümünü Buraya Yazınız"
+        "boy = float(input(\"Boyunuz: \"))\n",
+        "kilo = float(input(\"Kilonuz: \"))\n",
+        "\n",
+        "bki = kilo / (boy ** 2)\n",
+        "\n",
+        "if bki < 18.5:\n",
+        "    print(\"bki: {}. Zayıfsınız.\".format(bki))\n",
+        "elif 18.5 <= bki < 25:\n",
+        "    print(\"bki: {}. Normal Kilodasınız.\".format(bki))\n",
+        "elif 25 <= bki < 30:\n",
+        "    print(\"bki: {}. Fazla Kilolusunuz.\".format(bki))\n",
+        "else:\n",
+        "    print(\"bki: {}. Obezsiniz.\".format(bki))\n"
       ]
     },
     {
@@ -173,13 +269,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "Tu2mcgco_Te-"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Tebrikler, ehliyet alabilirsiniz!\n"
+          ]
+        }
+      ],
       "source": [
-        "# 6.Problemin Çözümünü Buraya Yazınız"
+        "isim = input(\"İsminiz nedir? \")\n",
+        "yas = int(input(\"Yaşınız kaç? \"))\n",
+        "egitim = input(\"Eğitim durumu?\")\n",
+        "\n",
+        "if yas >= 18 and (egitim == \"Lise\" or egitim == \"Üniversite\"):\n",
+        "    print(\"Tebrikler, ehliyet alabilirsiniz!\")\n",
+        "else:\n",
+        "    print(\"Malesef ehliyet alamazsınız.\")\n"
       ]
     },
     {
@@ -207,34 +318,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "4uWh8qUL_Te_"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "21000 artık yıl değil.\n"
+          ]
+        }
+      ],
       "source": [
-        "# 7.Problemin Çözümünü Buraya Yazınız"
+        "yil = int(input(\"yıl gir: \"))\n",
+        "\n",
+        "if (yil % 4 == 0 and yil % 100 != 0) or (yil % 400 == 0):\n",
+        "    print(yil, \"artık yıldır.\")\n",
+        "else:\n",
+        "    print(yil, \"artık yıl değil.\")\n"
       ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3.10.5 64-bit",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
-      "version": "3.10.5"
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.1"
     },
     "orig_nbformat": 4,
     "vscode": {
       "interpreter": {
         "hash": "5026d2d6e7aaaaba093def813beadff083d8733e4a511af01735cbabd156995d"
       }
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
