--- a/UYGULAMALAR/egitimsonrasıuygulamalar/4.Hafta Eğitim Sonrası Görevleri.ipynb
+++ b/UYGULAMALAR/egitimsonrasıuygulamalar/4.Hafta Eğitim Sonrası Görevleri.ipynb
@@ -11,11 +11,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: {'okulNo': '', 'isim': '1', 'soyisim': '1', 'telefon numarasi': '1', 'dogum Tarihi': '1'}}\n",
+      "{1: {'okulNo': '', 'isim': '1', 'soyisim': '1', 'telefon numarasi': '1', 'dogum Tarihi': '1'}, 2: {'okulNo': '1', 'isim': '1', 'soyisim': '1', 'telefon numarasi': '1', 'dogum Tarihi': '1'}}\n",
+      "{1: {'okulNo': '', 'isim': '1', 'soyisim': '1', 'telefon numarasi': '1', 'dogum Tarihi': '1'}, 2: {'okulNo': '1', 'isim': '1', 'soyisim': '1', 'telefon numarasi': '1', 'dogum Tarihi': '1'}, 3: {'okulNo': '1', 'isim': '1', 'soyisim': '1', 'telefon numarasi': '1', 'dogum Tarihi': '1'}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# 1.Problemin Çözümünü Buraya Yazınız"
+    "ogrenciler = {}\n",
+    "\n",
+    "for i in range(1,4):\n",
+    "    okulNo = input(\"öğrencinin okul numarasi:\")\n",
+    "    isim = input(\"öğrencinin adi: \")\n",
+    "    soyisim = input(\"öğrencinin soyadi: \")\n",
+    "    telNo = input(\"öğrencinin telefon numarasi: \")\n",
+    "    dogumTarihi = input(\"öğrencinin doğum tarihini girin: \")\n",
+    "    \n",
+    "    ogrenciler[i]= {\n",
+    "    \"okulNo\": okulNo,\n",
+    "    \"isim\": isim,\n",
+    "    \"soyisim\": soyisim,\n",
+    "    \"telefon numarasi\": telNo,\n",
+    "    \"dogum Tarihi\": dogumTarihi}\n",
+    "\n",
+    "    print(ogrenciler)\n",
+    "\n"
    ]
   },
   {
@@ -43,11 +70,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 10, 15, 20]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2.Problemin a Şıkkının Çözümünü Buraya Yazınız"
+    "#Listeyi yazalım\n",
+    "numbers = [5,10,10,15,15,15,20,20,20,20]\n",
+    "#elemanları tekte alan bir grup yarat\n",
+    "altGrup=[]\n",
+    "\n",
+    "for number in numbers:\n",
+    "    if number in altGrup:\n",
+    "        continue\n",
+    "    else:\n",
+    "        altGrup.append(number)\n",
+    "\n",
+    "print(altGrup)"
    ]
   },
   {
@@ -68,11 +114,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tekrar edenler[10, 10, 15, 15, 15, 20, 20, 20, 20]\n",
+      "Terkar etmeyenler[5]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2.Problemin b Şıkkının Çözümünü Buraya Yazınız"
+    "#listeyi yazdık\n",
+    "numbers = [5,10,10,15,15,15,20,20,20,20]\n",
+    "#elemanları tekte alan bir grup yarat\n",
+    "repeatNumbers=[]\n",
+    "uniqueNumbers=[]\n",
+    "\n",
+    "#\n",
+    "for number in numbers:\n",
+    "    if numbers.count(number) ==1:\n",
+    "        uniqueNumbers.append(number)\n",
+    "    else:\n",
+    "        repeatNumbers.append(number)\n",
+    "\n",
+    "print(f\"Tekrar edenler{repeatNumbers}\")\n",
+    "print(f\"Terkar etmeyenler{uniqueNumbers}\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -89,11 +160,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{4, 5}\n",
+      "{1, 2, 3}\n",
+      "{8, 6, 7}\n",
+      "{1, 2, 3, 4, 5, 6, 7, 8}\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3.Problemin Çözümünü Buraya Yazınız"
+    "#Önce bir kümeleri yaz\n",
+    "birinciGrup = {1,2,3,4,5}\n",
+    "ikinciGrup = {4,5,6,7,8}\n",
+    "\n",
+    "#kesişimini al\n",
+    "kesisim = birinciGrup.intersection(ikinciGrup)\n",
+    "\n",
+    "#farkını al\n",
+    "birinciGrubunIikinciGruptanFarki = birinciGrup.difference(ikinciGrup) \n",
+    "ikinciGrubunBirinciGruptanFarki= ikinciGrup.difference(birinciGrup)\n",
+    "\n",
+    "#birleştir.\n",
+    "hepsi= birinciGrup.union(ikinciGrup)\n",
+    "\n",
+    "print(kesisim)\n",
+    "print(birinciGrubunIikinciGruptanFarki)\n",
+    "print(ikinciGrubunBirinciGruptanFarki)\n",
+    "print(hepsi)\n"
    ]
   },
   {
@@ -121,11 +220,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                Ben tiyatro aşiği bir insanim canim         \n",
+      "                ben tiyatro aşiği bir insanim canim         \n",
+      "                ben tiyatro aşiği bir insanim canim         \n",
+      "                BEN TIYATRO AŞIĞI BIR INSANIM CANIM         \n",
+      "                bEN TIYATRO AŞIĞI BIR INSANIM CANIM         \n",
+      "                Ben Tiyatro Aşiği Bir Insanim Canim         \n",
+      "                Ben opera aşiği bir insanim canim         \n",
+      "False\n",
+      "False\n",
+      "20\n",
+      "34\n",
+      "1\n",
+      "['Ben', 'tiyatro', 'aşiği', 'bir', 'insanim', 'canim']\n",
+      "Ben tiyatro aşiği bir insanim canim\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4.Problemin Çözümünü Buraya Yazınız"
+    "k = \"                Ben tiyatro aşiği bir insanim canim         \"\n",
+    "print(k)\n",
+    "# birinci başlıktaki içerikleri işleteceğiz.\n",
+    "print(k.capitalize())\n",
+    "print(k.lower())\n",
+    "print(k.upper())\n",
+    "print(k.swapcase())\n",
+    "print(k.title())\n",
+    "#Replace kodunu kullanırken değiştireceği şeyi içeri koymamız gerekir.\n",
+    "print(k.replace(\"tiyatro\", \"opera\"))\n",
+    "\n",
+    "#gelelim başlık 2 ye\n",
+    "print(k.endswith(\"canim\"))\n",
+    "print(k.startswith(\"Sen\"))\n",
+    "print(k.find(\"tiyatro\"))\n",
+    "print(k.index(\"bir\"))\n",
+    "print(k.count(\"bir\"))\n",
+    "\n",
+    "#3.başlık\n",
+    "print(k.split())\n",
+    "print(k.strip())\n",
+    "print(k.isalpha())\n",
+    "print(k.isdigit())\n",
+    "\n",
+    "\n"
    ]
   }
  ],
@@ -136,8 +282,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.5"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
