--- a/UYGULAMALAR/egitimsonrasıuygulamalar/9. Hafta Eğitim Sonrası Görevi.ipynb
+++ b/UYGULAMALAR/egitimsonrasıuygulamalar/9. Hafta Eğitim Sonrası Görevi.ipynb
@@ -26,11 +26,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Televizyon Kumandası Uygulaması\n",
+      "\n",
+      "1. TV Aç\n",
+      "2. TV Kapat\n",
+      "3. Ses Ayarları\n",
+      "4. Kanal Ekle\n",
+      "5. Kanal Sayısını Öğrenme\n",
+      "6. Rastgele Kanala Geçme\n",
+      "7. Televizyon Bilgileri\n",
+      "\n",
+      "Çıkmak için q'ya basın.\n",
+      "\n",
+      "TV açılıyor...\n",
+      "TV zaten açık.\n",
+      "Program sonlandırılıyor...\n"
+     ]
+    }
+   ],
    "source": [
-    "# 1.Problemin Çözümünü Buraya Yazınız"
+    "import random\n",
+    "import time\n",
+    "\n",
+    "class Kumanda:\n",
+    "    def __init__(self):\n",
+    "        self.tv_durum = False\n",
+    "        self.ses = 0\n",
+    "        self.kanal_listesi = [\"TRT\", \"ATV\", \"FOX\", \"KANAL D\", \"SHOW TV\"]\n",
+    "        self.kanal = \"TRT\"\n",
+    "\n",
+    "    def tv_ac(self):\n",
+    "        if self.tv_durum:\n",
+    "            print(\"TV zaten açık.\")\n",
+    "        else:\n",
+    "            print(\"TV açılıyor...\")\n",
+    "            self.tv_durum = True\n",
+    "\n",
+    "    def tv_kapat(self):\n",
+    "        if self.tv_durum:\n",
+    "            print(\"TV kapatılıyor...\")\n",
+    "            self.tv_durum = False\n",
+    "        else:\n",
+    "            print(\"TV zaten kapalı.\")\n",
+    "\n",
+    "    def ses_ayarları(self):\n",
+    "        while True:\n",
+    "            cevap = input(\"Sesi açmak için '+', kısmak için '-', çıkmak için 'q' tuşuna basın:\")\n",
+    "            if cevap == \"+\":\n",
+    "                if self.ses != 31:\n",
+    "                    self.ses += 1\n",
+    "                    print(\"Ses:\", self.ses)\n",
+    "            elif cevap == \"-\":\n",
+    "                if self.ses != 0:\n",
+    "                    self.ses -= 1\n",
+    "                    print(\"Ses:\", self.ses)\n",
+    "            else:\n",
+    "                break\n",
+    "\n",
+    "    def kanal_ekle(self, kanal_ismi):\n",
+    "        print(\"Kanal ekleniyor...\")\n",
+    "        time.sleep(1)\n",
+    "        self.kanal_listesi.append(kanal_ismi)\n",
+    "        print(\"Kanal eklendi.\")\n",
+    "\n",
+    "    def kanal_sayisi(self):\n",
+    "        print(\"Kanal sayısı:\", len(self.kanal_listesi))\n",
+    "\n",
+    "    def rastgele_kanal(self):\n",
+    "        rastgele = random.randint(0, len(self.kanal_listesi)-1)\n",
+    "        self.kanal = self.kanal_listesi[rastgele]\n",
+    "        print(\"Şu anki kanal:\", self.kanal)\n",
+    "\n",
+    "    def tv_bilgileri(self):\n",
+    "        print(\"TV Durumu:\", self.tv_durum)\n",
+    "        print(\"Ses:\", self.ses)\n",
+    "        print(\"Şu anki kanal:\", self.kanal)\n",
+    "\n",
+    "\n",
+    "kumanda = Kumanda()\n",
+    "\n",
+    "print(\"\"\"\n",
+    "Televizyon Kumandası Uygulaması\n",
+    "\n",
+    "1. TV Aç\n",
+    "2. TV Kapat\n",
+    "3. Ses Ayarları\n",
+    "4. Kanal Ekle\n",
+    "5. Kanal Sayısını Öğrenme\n",
+    "6. Rastgele Kanala Geçme\n",
+    "7. Televizyon Bilgileri\n",
+    "\n",
+    "Çıkmak için q'ya basın.\n",
+    "\"\"\")\n",
+    "\n",
+    "while True:\n",
+    "    işlem = input(\"İşlem seçiniz:\")\n",
+    "\n",
+    "    if işlem == \"q\":\n",
+    "        print(\"Program sonlandırılıyor...\")\n",
+    "        break\n",
+    "\n",
+    "    elif işlem == \"1\":\n",
+    "        kumanda.tv_ac()\n",
+    "\n",
+    "    elif işlem == \"2\":\n",
+    "        kumanda.tv_kapat()\n",
+    "\n",
+    "    elif işlem == \"3\":\n",
+    "        kumanda.ses_ayarları()\n",
+    "\n",
+    "    elif işlem == \"4\":\n",
+    "        kanal_isimleri = input(\"Kanal isimlerini ',' ile ayırarak girin:\")\n",
+    "        kanal_listesi = kanal_isimleri.split(\",\")\n",
+    "        for eklenecekler in kanal_listesi:\n",
+    "            kumanda.kanal_ekle(eklenecekler)\n",
+    "\n",
+    "    elif işlem == \"5\":\n",
+    "        kumanda.kanal_sayisi()\n",
+    "\n",
+    "    elif işlem == \"6\":\n",
+    "        kumanda.rastgele_kanal()\n",
+    "\n",
+    "    elif işlem == \"7\":\n",
+    "        kumanda.tv_bilgileri()\n",
+    "\n",
+    "    else:\n",
+    "        print(\"Geçersiz işlem.\")\n",
+    "\n",
+    "\n"
    ]
   }
  ],
@@ -41,8 +172,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.5 (tags/v3.10.5:f377153, Jun  6 2022, 16:14:13) [MSC v.1929 64 bit (AMD64)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
