--- a/UYGULAMALAR/egitimöncesiuygulamalar/10. Hafta Eğitim Öncesi Görevleri.ipynb
+++ b/UYGULAMALAR/egitimöncesiuygulamalar/10. Hafta Eğitim Öncesi Görevleri.ipynb
@@ -10,19 +10,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5,)\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "# 1 - numpy kütüphanesini import edin\n",
+    "import numpy as np\n",
     "\n",
-    "# 2 - 0 ile 10 arasında 5 sayıdan oluşan matris üretin\n",
+    "# 1\n",
+    "matris = np.random.randint(0, 10, size=(5,))\n",
     "\n",
-    "# 3 - matris'in boyutunu öğrenin\n",
+    "# 2\n",
+    "print(matris.shape)  # (5,)\n",
     "\n",
-    "# 4 - matris'i yeniden boyutlandırın\n",
+    "# 3\n",
+    "matris = matris.reshape(5, 1)\n",
     "\n",
-    "# 5 - matris'in boyut sayısını öğrenin\n"
+    "# 4\n",
+    "print(matris.ndim)  # 2\n",
+    "\n"
    ]
   },
   {
@@ -35,15 +49,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Üretilen matris:\n",
+      " [[1]\n",
+      " [3]\n",
+      " [5]\n",
+      " [7]\n",
+      " [9]]\n",
+      "Parçalanan matrisler:\n",
+      "[[1]]\n",
+      "[[3]]\n",
+      "[[5]]\n",
+      "[[7]]\n",
+      "[[9]]\n",
+      "Birleştirilmiş matris:\n",
+      " [[1 3 5 7 9]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 1 - 0 ile 10 arasında bulunan tek sayılardan oluşan matris üretin\n",
+    "import numpy as np\n",
     "\n",
-    "# 2 - Oluşturduğunuz matrisi parçalayın\n",
+    "# 1\n",
+    "matris = np.arange(1, 10, 2).reshape(5, 1)\n",
+    "print(\"Üretilen matris:\\n\", matris)\n",
     "\n",
-    "# 3 - Parçalanmış matrisleri birleştirin\n"
+    "# 2\n",
+    "parcalar = np.split(matris, 5)\n",
+    "print(\"Parçalanan matrisler:\")\n",
+    "for p in parcalar:\n",
+    "    print(p)\n",
+    "\n",
+    "# 3\n",
+    "birlesik_matris = np.concatenate(parcalar, axis=1)\n",
+    "print(\"Birleştirilmiş matris:\\n\", birlesik_matris)\n"
    ]
   },
   {
@@ -56,13 +101,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Üretilen matris:\n",
+      " [[ 36  38]\n",
+      " [ 74  78]\n",
+      " [126 120]\n",
+      " [ 40  72]\n",
+      " [ 98  78]]\n",
+      "Matrisin boyutu:  (5, 2)\n",
+      "Matrisin eleman sayısı:  10\n",
+      "Matrisin veri tipi:  int32\n",
+      "Matrisin elemanlarının toplamı:  760\n",
+      "Matrisin en küçük elemanı:  36\n",
+      "Matrisin en büyük elemanı:  126\n",
+      "Matrisin ortalama değeri:  76.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# 1 - 5 ile 100 arasında ikişer ikişer atlayarak rastgele 10 sayıdan oluşan matris üretin\n",
+    "import numpy as np\n",
     "\n",
-    "# 2 - matris'in özelliklerini inceleyin\n"
+    "# 1\n",
+    "matris = np.random.randint(5, 100, size=(5,2)) * 2\n",
+    "print(\"Üretilen matris:\\n\", matris)\n",
+    "\n",
+    "# 2\n",
+    "print(\"Matrisin boyutu: \", matris.shape)\n",
+    "print(\"Matrisin eleman sayısı: \", matris.size)\n",
+    "print(\"Matrisin veri tipi: \", matris.dtype)\n",
+    "print(\"Matrisin elemanlarının toplamı: \", matris.sum())\n",
+    "print(\"Matrisin en küçük elemanı: \", matris.min())\n",
+    "print(\"Matrisin en büyük elemanı: \", matris.max())\n",
+    "print(\"Matrisin ortalama değeri: \", matris.mean())\n",
+    "\n"
    ]
   }
  ],
@@ -73,8 +150,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.5 (tags/v3.10.5:f377153, Jun  6 2022, 16:14:13) [MSC v.1929 64 bit (AMD64)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
